Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.4.7: May 03, 2008

* prepstrip was updated to match current portage semantics, minus stripping
  and splitdebug functionality (we handle that via a trigger).  Via this,
  FEATURES=installsources and basic bincheck (pre-stripped binaries) is now
  supported.

* FEATURES='strip nostrip splitdebug' are now supported in portage
  configuration (trigger is pkgcore.merge.triggers.BinaryDebug).

* added cygwin ostype target for development purposes.  In no shape or form
  is this currently considered supported, although anyone interested in 
  developing support for that platform, feel free to contact us.

* in candidate identification in repository restriction matching, it was
  possible for a PackageRestriction that was negated to be ignored, thus
  resulting in no matches.  This has been corrected, although due to
  collect_package_restrictions, it's possible to lose the negation state
  leading to a similar scenario (no known cases of it currently).  This 
  codepath will need reworking to eliminate these scenarios.

* mercurial+ sync prefix is now supported for hg.

* triggers _priority class var is now priority; overload with a property if
  custom functionality is needed.


pkgcore 0.4.6: April 29, 2008

* filelist sets (world file for example) are now sorted by atom comparison
  rules.  ticket #178.

* pquery --restrict-revdep-pkgs and --revdep-pkgs were added: they're
  used to first match against possible pkgs, then do the revdep looking for
  pkgs that revdep upon those specific versions.  Functionality may change,
  as may the outputting of it.  ticket #179.

* pebuild breakage introduced in 11/07 is corrected; back to working.

* 'info' messages during merging are now displayed by default- new debug
  message type was added that isn't displayed by default.

* ebuild domain now accepts triggers configuration directive.
